--- a/Soligorsk_css/Soligorsk.html
+++ b/Soligorsk_css/Soligorsk.html
@@ -17,7 +17,7 @@
 			<li><a href="culture.html">Культура</a></li>
 			<li><a href="attraction.html">Достопримечательности</a></li>
 			<li><a href="sport.html">Спорт</a></li>
-			<li><a href="contact.html">Контакт</a></li>
+			<li><a href="contact.html">Контакты</a></li>
 		</ul>
 		</div>
 		<h1>Добро пожаловать в Солигорск</h1>
